--- a/index.html
+++ b/index.html
@@ -10,25 +10,44 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 <link rel="stylesheet" href="style.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <section class="container">
-    <div class="info">
-        <h1 class="heading">Get <span class="purple">insights</span> that help your business grow.</h1>
-        <p class="information">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+    <div class="left">
+        <h1 class="heading">Get <span class="purple">insights</span> that help
+        </h1>
+            <h1 class= "heading"> your business grow.
+            </h1>
+        <div class = "paragraph">
+        <p class="information">
+            Discover the benefits of data analytics and make 
+        </p>
+        <p class = "information">
+        better decisions regarding revenue, customer
+        </p> 
+        <p class = "information"> 
+            experience, and overall efficiency.
+        </p>
+    </div>
         <ul class="stats">
             <li>
-                <span class="numbers">10k+</span> <span class="underneath">companies</span>
+                <h1><span class="numbers">10k+</span> </h1>
+                    <span class="underneath">companies</span>
+            </li>
+                <li>
+                <h1><span class="numbers">314</span></h1> <span class="underneath">templates</span>
             </li>
             <li>
-                <span class="numbers">314</span> <span class="underneath">templates</span>
-            </li>
-            <li>
-                <span class="numbers">12M+</span> <span class="underneath">queries</span>
+                <h1><span class="numbers">12M+</span></h1> <span class="underneath">queries</span>
             </li>
         </ul>
     </div>
-    <div class = "overlay">
+  <div class="image">
      <img src="/images/image-header-desktop.jpg"> 
        </img>
     </div>
