--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
   <section class="container">
     <div class="left">
-        <h1 class="heading">Get <span class="purple">insights</span> that help
+        <h1 class="heading1">Get <span class="purple">insights</span> that help
         </h1>
-            <h1 class= "heading"> your business grow.
+            <h1 class= "heading2"> your business grow.
             </h1>
         <div class = "paragraph">
         <p class="information">
