--- a/index.html
+++ b/index.html
@@ -19,31 +19,23 @@
 
   <section class="container">
     <div class="left">
-        <h1 class="heading1">Get <span class="purple">insights</span> that help
-        </h1>
-            <h1 class= "heading2"> your business grow.
+        <h1 class="heading1">Get <span class="purple">insights</span> that help your business grow.
             </h1>
         <div class = "paragraph">
         <p class="information">
-            Discover the benefits of data analytics and make 
-        </p>
-        <p class = "information">
-        better decisions regarding revenue, customer
-        </p> 
-        <p class = "information"> 
-            experience, and overall efficiency.
+            Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
         </p>
     </div>
         <ul class="stats">
             <li>
-                <h1><span class="numbers">10k+</span> </h1>
+                <span class="numbers">10k+</span> 
                     <span class="underneath">companies</span>
             </li>
                 <li>
-                <h1><span class="numbers">314</span></h1> <span class="underneath">templates</span>
+                <span class="numbers">314</span><span class="underneath">templates</span>
             </li>
             <li>
-                <h1><span class="numbers">12M+</span></h1> <span class="underneath">queries</span>
+                <span class="numbers">12M+</span><span class="underneath">queries</span>
             </li>
         </ul>
     </div>
