--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </ul>
     </div>
   <div class="image">
-     <img src="https://github.com/AOseni1/Frontend-Mentor-Stats-Preview-Card/blob/master/images/image-header-desktop.jpg"> 
+     <img src="./images/image-header-desktop.jpg"> 
        </img>
     </div>
 
