--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </ul>
     </div>
   <div class="image">
-     <img src="/images/image-header-desktop.jpg"> 
+     <img src="./images/image-header-desktop.jpg"> 
        </img>
     </div>
 
